--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,16 @@
 name = "gh-status"
 version = "0.1.0"
 description = "Generates daily LLM-optimized public activity feeds for a solo dev."
-requires-python = ">=3.13.1"
+requires-python = ">=3.14"
 dependencies = [
     "httpx",
     "pydantic",
+    "pydantic>=2.12.0; python_version >= '3.14'",
     "tomlkit",
     "pytz",
     "hishel",  # Caching for httpx, replaces requests-cache
-    "jinja2"
+    "jinja2",
+    "python-dotenv>=1.1.1"
 ]
 
 
@@ -88,7 +90,7 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.sdist]
 include = [
     "gh_status/**/*.py",
-    "gh_status/schemas/*",
+    "gh_status/resources/*.html.jjinja2",
     "gh_status/py.typed",
     "/README.md", "LICENSE",
 ]
@@ -101,7 +103,7 @@ exclude = [
 packages = ["gh_status"]
 include = [
     "gh_status/**/*.py",
-    "gh_status/schemas/*",
+    "gh_status/resources/*.html.jjinja2",
     "gh_status/py.typed",
     "/README.md", "LICENSE",
 ]
